--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,6 +5,7 @@ body {
   font-size: 17px;
   line-height: 1.5;
   width: 100%;
+  background-color: #fafafa;
 }
 
 .container {
@@ -39,7 +40,7 @@ body {
 }
 
 #main-navigation ul li a {
-  color: #f54f33;;
+  color: #f54f33;
   text-decoration: none;
   padding: 10px 15px;
 }
@@ -50,6 +51,18 @@ body {
   transition: 0.3s ease all;
 }
 
+#home {
+  background-color: #53899f;
+  background-image:
+    linear-gradient(
+      to right, 
+      #53899f,
+      #53899f 5%,
+      #53899f 15%,
+      #53898f 25%,
+      #53898f 75%
+    );
+}
 /* HERO SECTION */
 .hero {
   text-align: center;
@@ -63,7 +76,7 @@ body {
 }
 
 .hero-title {
-  margin: 0;
+  display: block;
   font-weight: 100;
   letter-spacing: 2px;
 }
@@ -86,15 +99,59 @@ body {
 /* site-section */
 
 #services {
-  width: 100%;
+  padding: 40px;
+  line-height: 30px;
+  font-size: 17px;
+  letter-spacing: 2px;
+  font-weight: 300;
+  background-color: rgb(230, 234, 240);
+  background-image:
+    linear-gradient(
+      to right, 
+      rgb(230, 234, 240),
+      rgb(230, 234, 240) 15%,
+      rgb(230, 234, 240) 45%,
+      #ECF0F1 85%,
+      #ECF0F1 5%
+    );
 }
+
+#services h2:first-child {
+  font-size: 30px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 300;
+  color: #53899f;
+  text-align: center;
+  background-color: rgb(230, 234, 240);
+  background-image:
+    linear-gradient(
+      to right, 
+      rgb(230, 234, 240),
+      rgb(230, 234, 240) 15%,
+      rgb(230, 234, 240) 45%,
+      #ECF0F1 85%,
+      #ECF0F1 5%
+    );
+}
+
 .section-header h2 {
   font-size: 30px;
   letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: 300;
-  color: #777;
+  color: #fafafa;
   text-align: center;
+  background-color: #53899f;
+  background-image:
+    linear-gradient(
+      to right, 
+      #53899f,
+      #53899f 5%,
+      #53899f 15%,
+      #53898f 25%,
+      #53898f 45%
+    );
 }
 
 .section-header-end h2 {
@@ -111,6 +168,7 @@ body {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  padding: 15px;
 }
 
 .row-2 {
@@ -118,16 +176,27 @@ body {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  background-color: rgb(230, 234, 240);
+  background-image:
+    linear-gradient(
+      to right, 
+      rgb(230, 234, 240),
+      rgb(230, 234, 240) 15%,
+      rgb(230, 234, 240) 45%,
+      #ECF0F1 85%,
+      #ECF0F1 5%
+    );
 }
 
 
 .site-section-inside {
-  height: 500px;
+  height: 610px;
   display: flex;
   flex: 3;
   flex-direction: column;
   margin: 0px auto;
   padding: 15px;
+  overflow-y: auto;
 }
 
 .site-section-inside-pic {
@@ -168,6 +237,7 @@ body {
 
 .education {
   display: block;
+  text-align: center;
 }
 
 .site-section-secondary {
@@ -193,7 +263,7 @@ body {
 }
 
 .item-in p {
-  color: #53899f;
+  color: #384058;
   font-display: bold;
   line-height: 30px;
   margin: 10px;
@@ -215,19 +285,20 @@ body {
 
 #about {
   background: #ECF0F1;
-  padding: 40px;
+  padding: 25px;
   line-height: 30px;
-  margin: 50px;
-  overflow-y: auto;
   font-size: 17px;
   letter-spacing: 2px;
   font-weight: 300;
+
   color: #777;
 
 }
 
 #about h2 {
-  color: #5093E3;
+  color: #53899f;
+  background-color: #ECF0F1;
+  background-image: none;
 }
 
 
@@ -322,7 +393,7 @@ body {
   body {
     font-family: Arial, Helvetica, sans-serif;
     word-wrap: break-word;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.5;
   }
 
@@ -357,10 +428,10 @@ body {
     min-height: 200px;
   }
   .hero-content {
-    padding-top: 80px;
+    padding-top: 50px;
   }
   .hero-title {
-    font-size: 30px;
+    font-size: 40px;
   }
 
   .row {
@@ -382,7 +453,7 @@ body {
     display: block;
     font-weight: 200;
     overflow-y: auto;
-    font-size: 15px;
+    font-size: 25px;
   }
 
   .site-section .two {
@@ -401,6 +472,7 @@ body {
   .row-2 {
     display: flex;
     flex-direction: column;
+    background-color: rgb(230, 234, 240);
   }
 
   .item {
@@ -417,6 +489,7 @@ body {
   }
   .item-in p {
     display: block;
+    font-size: 25px;
   }
 
 
