--- a/src/css/App.css
+++ b/src/css/App.css
@@ -28,8 +28,7 @@ body {
   background-size: 20px 20px;
   display: inline-block;
   width: 100%;
-  position: relative;
-  top: 0;
+
 }
 
 #main-navigation ul {
@@ -37,6 +36,7 @@ body {
   display: flex;
   justify-content: space-around;
   padding-left: 0px;
+  white-space: nowrap;
 }
 
 #main-navigation ul li a {
@@ -49,6 +49,7 @@ body {
   background: #444;
   border-radius: 3px;
   transition: 0.3s ease all;
+  white-space: nowrap;
 }
 
 #home {
@@ -154,21 +155,19 @@ body {
     );
 }
 
-.section-header-end h2 {
+/* .section-header-end h2 {
   font-size: 30px;
   letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: 300;
-  color: #777;
   text-align: center;
-}
+} */
 
 .row {
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 15px;
 }
 
 .row-2 {
@@ -190,13 +189,13 @@ body {
 
 
 .site-section-inside {
-  height: 610px;
+
   display: flex;
-  flex: 3;
   flex-direction: column;
   margin: 0px auto;
   padding: 15px;
   overflow-y: auto;
+  flex: 1;
 }
 
 .site-section-inside-pic {
@@ -207,7 +206,7 @@ body {
   height: 6rem;
 }
 
-.site-section-inside h2 {
+.site-section-inside h3 {
   text-align: center;
   font-weight: 300;
   font-size: 35px;
@@ -240,9 +239,9 @@ body {
   text-align: center;
 }
 
-.site-section-secondary {
+/* .site-section-secondary {
   background: #EFEFEF;
-}
+} */
 
 .item {
   height: 450px;
@@ -290,9 +289,7 @@ body {
   font-size: 17px;
   letter-spacing: 2px;
   font-weight: 300;
-
   color: #777;
-
 }
 
 #about h2 {
@@ -437,12 +434,13 @@ body {
   .row {
     display: flex;
     flex-direction: column;
-    justify-content: center;
   }
 
   .site-section-inside {
     display: block;
+    height: 500px;
     text-align: center;
+    width: 100%;
   }
 
   .site-section-inside img {
@@ -464,6 +462,11 @@ body {
   }
 
   .site-section {
+    display: block;
+    width: 100%;
+  }
+
+  .service-box {
     display: block;
     width: 100%;
   }
