--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,9 @@
+html {
+  -webkit-font-smoothing: antialiased;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 62.5%;
+}
+
 body {
   margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
@@ -5,145 +11,23 @@ body {
   font-size: 17px;
   line-height: 1.5;
   width: 100%;
-  background-color: #fafafa;
+  background-color: #E0E0E0;
 }
 
+main {
+  height: 100vh;
+}
 .container {
-  overflow: auto;
   margin: 0px auto;
-}
-
-/* navbar */
-
-#main-navigation {
-  text-align: center;
-  background:
-  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
-  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
-  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
-  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
-  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
-  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
-  background-color: #131313;
-  background-size: 20px 20px;
-  display: inline-block;
-  width: 100%;
-
-}
-
-#main-navigation ul {
-  list-style: none;
   display: flex;
-  justify-content: space-around;
-  padding-left: 0px;
-  white-space: nowrap;
-}
-
-#main-navigation ul li a {
-  color: #f54f33;
-  text-decoration: none;
-  padding: 10px 15px;
-}
-
-#main-navigation ul li a:hover {
-  background: #444;
-  border-radius: 3px;
-  transition: 0.3s ease all;
-  white-space: nowrap;
+  flex-direction: column;
 }
 
 #home {
   background-color: #53899f;
 }
-/* HERO SECTION */
-.hero {
-  text-align: center;
-  background: #555;
-}
-
-.hero-content {
-  color: #53899f;
-  padding: 10px;
-  line-height: 1;
-}
-
-.hero-title {
-  display: block;
-  font-weight: 100;
-  letter-spacing: 2px;
-}
-
-.hero-content p {
-  font-size: 50px; 
-  margin-bottom: 60px;
-}
-
-.hero-content a {
-  color: white;
-  border: 3px solid white;
-  border-radius: 3px;
-  padding: 15px 30px;
-  margin-right: 20px;
-  text-decoration: none;
-  font-size: 28px;
-}
 
 /* site-section */
-
-#services {
-  padding: 40px;
-  line-height: 30px;
-  font-size: 17px;
-  letter-spacing: 2px;
-  font-weight: 300;
-  background-color: rgb(230, 234, 240);
-  background-image:
-    linear-gradient(
-      to right, 
-      rgb(230, 234, 240),
-      rgb(230, 234, 240) 15%,
-      rgb(230, 234, 240) 45%,
-      #ECF0F1 85%,
-      #ECF0F1 5%
-    );
-}
-
-#services h2:first-child {
-  font-size: 30px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  font-weight: 300;
-  color: #53899f;
-  text-align: center;
-  background-color: rgb(230, 234, 240);
-  background-image:
-    linear-gradient(
-      to right, 
-      rgb(230, 234, 240),
-      rgb(230, 234, 240) 15%,
-      rgb(230, 234, 240) 45%,
-      #ECF0F1 85%,
-      #ECF0F1 5%
-    );
-}
-
-.section-header h2 {
-  font-size: 30px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  font-weight: 300;
-  color: #fafafa;
-  text-align: center;
-  background-color: #53899f;
-}
-
-.section-header-end h2 {
-  font-size: 30px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  font-weight: 300;
-  text-align: center;
-}
 
 .row {
   display: flex;
@@ -152,7 +36,7 @@ body {
   flex-wrap: wrap;
 }
 
-.row-2 {
+/* .row-2 {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -167,10 +51,58 @@ body {
       #ECF0F1 85%,
       #ECF0F1 5%
     );
+} */
+
+/* Services section */
+#services {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
+#services h2 {
+  color: #53899f;
+}
 
-.site-section-inside {
+.services {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 22rem;
+}
+
+.services ul {
+  padding-left: 0;
+  list-style: none;
+}
+
+.services ul li div {
+  border-radius: .8rem;
+  padding: 1rem;
+}
+
+.service-card-1 {
+  background-color: #1DE9B6;
+  width: 10rem;
+  margin: .5rem;
+  text-align: center;
+}
+
+.service-card-2 {
+  background-color: #00B0FF;
+  width: 10rem;
+  margin: .5rem;
+  text-align: center;
+}
+
+.service-card-3 {
+  background-color: #00E5FF;
+  width: 10rem;
+  margin: .5rem;
+  text-align: center;
+  overflow: auto;
+}
+/* .site-section-inside {
   display: flex;
   flex-direction: column;
   margin: 0px auto;
@@ -196,9 +128,9 @@ body {
 .site-section-inside p {
   font-weight: 300;
   font-size: 15px;
-}
+} */
 
-.center {
+/* .center {
   line-height: 30px;
 }
 
@@ -218,48 +150,86 @@ body {
 .education {
   display: block;
   text-align: center;
-}
+} */
 
 /* .site-section-secondary {
   background: #EFEFEF;
 } */
-
-.item {
-  height: 450px;
+ 
+.project {
+  position: relative;
   display: flex;
-  flex: 1;
-  flex-direction: column;
+  flex-wrap: nowrap;
+  margin: 2.5rem 1.5rem;
+  background-color: #FFFFFF;
+  border-radius: 10px;
   align-items: center;
-  margin: 0px auto;
-  padding: 25px;
+  justify-content: space-around;
+  box-shadow: 1px 2px #F5F5F5;
 }
 
-.item-in h3 {
-  color: #f54f33;
-  font-display: bold;
-  line-height: 30px;
+
+/* .project img:hover  {
+  opacity: 0.3;
+} */
+
+/* .item:hover .item-in {
+  opacity: 1;
+  background-color: #00a8e0e2;
+  border-radius: 10px;
+} */
+
+
+/* Figure out the projet setup and words display for them */
+
+.project-info {
+  display: flex;
+  flex-direction: column;
+  width: 35rem;
+  height: 32rem;
+  overflow-y: auto;
+  margin: 1.5rem 1.5rem 1.5rem 2rem;
+}
+
+.project-info a {
+  text-decoration: none;
+  border-bottom: 1px dotted #49bf9d;
+  width: 90px;
+}
+
+.project-info span {
+  color:  #49bf9d;
+}
+
+.project img {
+  display: block;
+  width: 35rem;
+  max-width: 100%;
+  height: 30rem;
+  border-radius: 10px;
+  margin: 1.5rem;
+}
+.project-info a:visited {
+  color: initial;
+}
+
+/* .item-in h3 {
+  color: rgb(0, 255, 115);
+  padding: 1rem;
   text-align: center;
-  
+  margin: 1rem;
 }
 
 .item-in p {
-  color: #384058;
-  font-display: bold;
-  line-height: 30px;
-  margin: 10px;
-  font-size: 17px;
-}
+  color: #ffffff;
+  padding: 0 1rem 1rem 1rem;
+} */
 
-.item img {
-  width: 20rem;
-  border-radius: 10px;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
 
-.item img:hover {
+/* .item img:hover {
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.44);
   transition: 0.3s ease all;
-}
+} */
 
 /*About*/
 
@@ -296,27 +266,25 @@ body {
   border-radius: 20%;
 }
 
+.bigger {
+  transform: scale(1.1);
+}
+
 .in-touch a img:hover {
-  background-color:#5093E3;
   transition: 0.3s ease all;
+  height: 3.5rem;
 }
 
 /* connect */
 .connect {
   display: flex;
+  flex-direction: column;
   text-align: center;
 }
 
 /* footer*/
 
-#footer {
-  background:
-  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
-  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
-  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
-  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
-  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
-  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+/* #footer {
   background-color: #131313;
   background-size: 20px 20px;
   position: relative;
@@ -328,15 +296,15 @@ body {
   height: 5rem;
   text-align: center;
   bottom: 0;
-}
+} */
 
-#footer img {
+/* #footer img {
   display: flex;
   border-radius: 15px;
   height: 3.5rem;
   width: 3.5rem;
   margin: 0 auto 2px;
-}
+} */
 
 /* contact */
 
@@ -367,10 +335,66 @@ body {
   background-color: #ECF0F1; 
 }
 
+ /* nav toggle */
+ .navbar-toggle {
+  position: absolute;
+  top: 2.5rem;
+  right: 2rem;
+  cursor: pointer;
+  color: #00a7e0;
+  font-size: 24px;
+}
+
+.active {
+  display: block;
+}
+
 /* mobile  */
 
+@media (max-width: 640px) {
+
+  .top-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #services {
+    display: flex;
+    flex-direction: column;
+    background-color: #9E9E9E;
+  }
+}
+
+@media (min-width: 640px) {
+  /* .top-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  } */
+  #services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .services {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+  }
+  .services ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
 @media only screen 
-  and (min-device-width: 375px) 
+  and (min-device-width: 37.5rem) 
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: portrait) {
@@ -387,24 +411,12 @@ body {
     display: block;
   }
 
-  /* [class*="col-"] {
-    width: 100%;
-  } */
-
   /* HEADER   */
-  #main-navigation {
-      display: block;
-      padding: 5px 0px 5px 0px;
-      width: 100%;
+  .top-nav {
+      display: flex;
+      flex-direction: column;
   }
-
-  #main-navigation ul {
-      display: block;
-      margin: 5px;
-      padding-left: 0px;
-  }
-
-  #main-navigation ul li {
+  .top-nav li {
     padding: 5px;
   }
   
@@ -459,10 +471,10 @@ body {
     width: 100%;
   }
 
-  .service-box {
-    display: block;
-    width: 100%;
-  }
+  /* #services {
+    display: flex;
+    flex-direction: column;
+  } */
   
 /* Projects BOXES   */
   .row-2 {
