--- a/src/css/App.css
+++ b/src/css/App.css
@@ -40,59 +40,7 @@ main {
   font-size: 22px;
   margin-bottom: 5px;
 }
-/* Services section */
-#services {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
 
-#services h2 {
-  color: #53899f;
-}
-
-.services {
-  justify-content: center;
-  display: flex;
-  flex-wrap: wrap;
-  width: 50rem;
-}
-
-.services ul {
-  padding-left: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.services ul li div {
-  border-radius: .8rem;
-  padding: 1rem;
-}
-
-.service-card-1 {
-  background-color: #1DE9B6;
-  width: 10rem;
-  margin: .5rem;
-  text-align: center;
-}
-
-.service-card-2 {
-  background-color: #00B0FF;
-  width: 10rem;
-  margin: .5rem;
-  text-align: center;
-}
-
-.service-card-3 {
-  background-color: #00E5FF;
-  width: 10rem;
-  margin: .5rem;
-  text-align: center;
-  overflow: auto;
-}
 
 /* Projects */
 
@@ -122,6 +70,7 @@ main {
   width: 35rem;
   height: 32rem;
   overflow-y: auto;
+  overflow-x: hidden;
   margin: 1.5rem 1.5rem 1.5rem 2rem;
 }
 
@@ -146,7 +95,6 @@ main {
 .project-info a:visited {
   color: initial;
 }
-
 
 /*About*/
 
@@ -247,7 +195,9 @@ main {
 
 /* mobile  */
 
-@media (max-width: 640px) {
+
+
+/* @media (min-width: 640px) {
   .top-nav {
     display: flex;
     flex-direction: column;
@@ -255,11 +205,27 @@ main {
     align-items: center;
   }
 
-  #services {
-    display: flex;
-    flex-direction: column;
-    background-color: #9E9E9E;
-    align-items: center;
+} */
+
+
+/* loader */
+#loader {
+  border: 1.6rem solid #000000;
+  border-radius: 50%;
+  border-top: 1.6rem solid #56a5eb;
+  width: 12rem;
+  height: 12rem;
+  animation: spin 2s linear infinite;
+  margin: 40px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
 
