--- a/src/css/App.css
+++ b/src/css/App.css
@@ -36,11 +36,17 @@ main {
   justify-content: center;
   flex-wrap: wrap;
 }
-.row h3 {
+.row h2 {
   font-size: 22px;
   margin-bottom: 5px;
 }
 
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 1.5rem;
+}
 
 /* Projects */
 
@@ -48,7 +54,7 @@ main {
   display: flex;
   flex-direction: row;
   width: 70rem;
-  height: 38rem;
+  height: 40rem;
   background-color: #fafafa;
   padding: .5rem;
   margin: 18px;
@@ -63,36 +69,56 @@ main {
   box-shadow: 1px 1px 1px #BDBDBD;
   transform: scale(1.01);
 }
+/* finish integrating tech stack here and on data */
+.tech-stack {
+  margin: 1rem;
+  padding: 1rem;
+  text-align: center;
+}
+.tech-stack span {
+  color: #0288D1;
+}
 
 .project-info {
   display: flex;
   flex-direction: column;
   width: 35rem;
-  height: 32rem;
+  max-height: 34rem;
   overflow-y: auto;
   overflow-x: hidden;
   margin: 1.5rem 1.5rem 1.5rem 2rem;
 }
 
-.project-info a {
+.color-gr {
   text-decoration: none;
+  color: #49bf9d !important;
   border-bottom: 1px dotted #49bf9d;
   width: 90px;
 }
 
-.project-info span {
+.project-info h3 {
+  margin: 0 auto;
   color:  #49bf9d;
+  font-weight: 600;
+  text-transform: lowercase;
+}
+
+.project-info p {
+  color: #616161;
+  word-wrap: break-word;
+  padding: 0.2rem;
+  margin-bottom: 7px;
 }
 
 .project img {
+  object-fit: cover;
   display: block;
-  width: 35rem;
-  height: 30rem;
+  width: 38rem;
   border-radius: 10px;
   margin: 1.5rem;
   flex: 1;
 }
-.project-info a:visited {
+.project a:visited {
   color: initial;
 }
 
