--- a/src/css/App.css
+++ b/src/css/App.css
@@ -45,109 +45,48 @@ main {
   color: #fafafa;
 }
 
-/* Projects */
-
-/* .project {
-  background-color: #fafafa;
-  padding: 1rem;
-  margin: 10px;
-  border-radius: 8px;
-  align-items: center;
-  box-shadow: 1px 1px 1px #F5F5F5;
-  position: relative;
-}
-
-.project:hover {
-  background-color: #E0E0E0;
-  transition: 0.1s ease all;
-  box-shadow: 1px 1px 1px #BDBDBD;
-  transform: scale(1.01);
-}
-
-.tech-stack {
-  margin: 1rem 0;
-  padding: 1rem;
-  text-align: center;
-}
-.tech-stack span {
-  color: #01579B;
-}
-
-.project-info {
-  padding: 5px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  max-height: 34rem;
-  margin: 1.5rem auto;
-}
-
-.color-gr {
-  text-decoration: none;
-  color: #F5F5F5;
-  background-color: #49bf9d;
-  padding: 6px 8px;
-  border-radius: 10px;
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-}
-
-.color-gr:hover {
-  background-color: #F5F5F5;
-  color: #49bf9d;
-  border: .1px solid #49bf9d;
-}
-
-.project h3 {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  margin: 0 0 0 1rem;
-  color:  #01579B;
-  font-weight: 600;
-  text-transform: lowercase;
-}
-
-.project-info p {
-  color: #616161;
-  word-wrap: break-word;
-  margin: 0 0 5rem;
-  padding: 1rem;
-  text-align: center;
-}
-
-.project img {
-  object-fit: cover;
-  display: block;
-  width: min(100%, 35rem);
-  border-radius: 10px;
-  margin: 5rem auto 0;
-  flex: 1;
-} */
-
 /*About*/
 
 #about {
   background: #ECF0F1;
-  padding: 25px;
+  margin: 0 0 2rem;
+  padding: 0;
   line-height: 30px;
   font-size: 17px;
   letter-spacing: 2px;
   font-weight: 300;
   color: #777;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-#about h3 {
+.about-intro h3 {
   background-color: #ECF0F1;
-  background-image: none;
-  color: #40C4FF;
+  text-align: center;
+  color: #0024aa;
   padding: .5rem;
+  
 }
 
-.about p {
-  padding: 10px;
-  color: #5e5e5e;
+.about-intro {
+  display: flex;
+  margin: 3rem auto 2rem;
+  padding: 1rem;
+  color: #000000;
+  font-weight: 400;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.about-intro p {
+  color: #373736;
+  padding: 1rem;
+  text-align: center;
+  width: 85vw;
 }
 
 .in-touch {
@@ -157,6 +96,11 @@ main {
 }
 
 .in-touch a img {
+  height: 4rem;
+  border-radius: 20%;
+}
+
+.fab .fa-linkedin {
   height: 4rem;
   border-radius: 20%;
 }
@@ -176,6 +120,11 @@ main {
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+
+.icon {
+  font-size: 5rem;
+  color: #000000;
 }
 
 .taller {
@@ -245,7 +194,11 @@ main {
   linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
   background-color: #131313;
   background-size: 20px 20px;
-  z-index: 999;
+  z-index: 99;
+}
+
+.fa-times {
+  display: none;
 }
 
 .desk-nav li {
@@ -323,18 +276,34 @@ ul li a:hover {
   .fas {
     display: block;
   }
+
   .desk-nav {
     height: 65px;
   }
+
   .desk-nav li  {
     display: none;
   }
+
+  .fa-times {
+    position: absolute;
+    z-index: 200;
+  }
+
   .top-nav {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
     margin: 0;
-    padding: 10px;
+    height: 100vh;
+    z-index: 99;
+    text-align: center;
+    padding: 2rem;
+    position: relative;
+    top: 0;
+    left: 0;
+    transition: transform 0.3s ease-in-out;
     background:
     linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
     linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
@@ -344,29 +313,33 @@ ul li a:hover {
     linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
     background-color: #131313;
     background-size: 20px 20px;
-    z-index: 999;
   }
+  
   .top-nav li {
   font-size: 1.1em;
   min-height: 50px;
   padding: .5rem;
   text-decoration: none;
   }
+
   .top-nav li {
     display: flex;
     align-items: center;
     text-transform: uppercase;
   }
+
   .top-nav li a {
     text-decoration: none;
     color: #00a7e0;
     padding: 8px 16px;
   }
+
   .top-nav li a:visited {
     color: initial;
     color: #00a7e0;
   }
-  ul li a:hover {
+
+  .top-nav li a:hover {
     background: #444;
     border-radius: 3px;
     white-space: nowrap;
