--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,7 +14,11 @@ body {
   font-size: 17px;
   line-height: 1.5;
   width: 100%;
-  background-color: #E0E0E0;
+  width: 100%;  background: #FFFFFF;
+  background: -webkit-linear-gradient(top left, #A6BDB9, #FFFFFF);
+  background: -moz-linear-gradient(top left,  #A6BDB9, #FFFFFF);
+  background: linear-gradient(to bottom right,  #A6BDB9, #FFFFFF);
+  font-weight: 500;
 }
 
 main {
@@ -40,6 +44,15 @@ main {
   padding: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
 }
+
+.projects-section {
+  background-color: rgb(0 166 224 / 50%);
+  padding: 2rem 1rem;
+  /* border-radius: 11px; */
+  border-bottom-left-radius: 11px;
+  border-bottom-right-radius: 11px;
+}
+
 .row h2 {
   font-size: 22px;
   margin-bottom: 5px;
@@ -249,16 +262,7 @@ ul li a:hover {
   transition: ease;
 }
 
-.fas {
-  position: absolute;
-  top: 2.5rem;
-  right: 2rem;
-  cursor: pointer;
-  color: #00a7e0;
-  font-size: 24px;
-  display: none;
-  z-index: 99;
-}
+
 
 /* loader */
 #loader {
