--- a/src/js/components/WelcomePage/Welcome.css
+++ b/src/js/components/WelcomePage/Welcome.css
@@ -1,53 +1,63 @@
-.card {
+.card-row {
   display: flex;
   margin: 3rem auto 2rem;
   padding: 1rem;
   color:  inherit;
   font-weight: 400;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  overflow: hidden;
   max-width: 1200px;
 }
 
-.card h1 {
-  font-size: clamp(1rem, 20vw, 2.3rem); 
-  padding: .5rem;
-  margin: 0 auto;
-  top: 25%;
-  text-align: center;
+.column {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+  padding: 0 1rem 1rem 0;
 }
 
-.card p {
+.column h1 {
+  margin-top: 0;
+}
+
+.column p {
   color: #373736;
-  width: 85vw;
-  padding: 1rem;
-  text-align: center;
+  margin-top: 0;
+  flex-grow: 2;
 }
 
-strong {
-  color: #FFF;
+.column strong {
+  color: #f53e7c;
 }
 
-.card img {
+.img-container img {
   object-fit: cover;
   width: clamp(15rem, 25vw, 30rem); 
-  border-radius: 50%;
-  margin: 0 0 1rem;
+  border-radius: 11px;
+  margin: 1rem;
 }
 
-.card a {
+.column a {
   margin: 1rem;
+  width: 11rem;
+  align-self: flex-end;
   bottom: 0;
   text-decoration: none;
-  color: #F5F5F5;
-  background-color: #0288D1;
+  color: #FFFFFF;
+  background-color: #00938b;
   padding: 10px 8px;
   border-radius: 10px;
   transition: background-color .2s ease-in-out,color .2s ease-in-out,border-color .2s ease-in-out;
 }
 
-.card a:hover {
-  opacity: 0.5;
+.column a:hover {
+  opacity: 0.6;
   transition: 0.1s ease all;
+}
+
+@media screen and (max-width:700px) {
+  .card-row {
+    flex-direction: column;
+    align-items: center;
+  }
 }
